[package]
name = "random_dog"
version = "0.1.0"
authors = ["Viacheslav Vasiliev <megbegbonok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = {version = "0.11.3"}
iced = {version = "0.3", features = ["image", "debug", "tokio"]}
