[package]
name = "random_dog"
version = "0.1.0"
authors = ["Viacheslav Vasiliev <rustyvyacheslav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "~0.23"
json = "~0.12.4"
reqwest = {version = "~0.11.3"}
iced = {version = "~0.3.0", features = ["image", "debug", "tokio"]}
